TRIB-2722 update the memory comment in the parent pom