@@ -25,7 +25,7 @@
 <!--
 if you do a maven build from the parent you will most likely have to increase your memory footprint this has worked for me
 in the past
-export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
+export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
